added section 4 sample code

--- a/2020/12/09.md
+++ b/2020/12/09.md
@@ -6,8 +6,6 @@
 
 1. [How to provide chrome dev tools in vscode editor](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8757064#questions/12383664 'introducing-chrome-debugger-for-vs-code on the right side of vscode you should have an icon for the extensions marketplace where you can search for chrome dev tools, you may also want to look at Debugger for Chrome with a lot more downloads and a four-star rating..')
 
-1. [It seems like it won’t let me use the 3 extensions on Visual Studio Project](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8757130#questions/12801477 "Did you figure this out.. I'm trying to clear up lingering questions.. but just saying it's not working isn't much to go on. What seems to be the difficulty? Is it giving you an error message? Can you post screen shots of where you are getting stuck at?")
-
 1. [Is Val a keyword? Or could we use any other word in that place.](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8757184#questions/13082046 "val is not a keyword, with a few minor exceptions (that he covered a few videos earlier) you can name your variables almost anything you'd like. The reason he keeps overwriting to val is so that he doesn't have to keep editing the console.log(val); at the bottom of the script")
 
 1. [Hi, I've been coding along with the video but wondered if there is also the code which Brad is writing for the basic syntax available somewhere? I could only find the projects on Github, cheers Andrew.](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8757194#questions/10781866 "Yes, AndrewIf you look under the tab for Course Content, each video has a resource on the right, clicking on this will download a zip file which you can extract by right-clicking after you've downloaded it locally and telling it where to extract the contents to. When I start a new section I go ahead and download all of them and then extract them into a shared folder.")
@@ -64,8 +62,6 @@ document.querySelector('.col').addEventListener('click', function () {
 // Mousemove
 // card.addEventListener('mousemove', runEvent);")
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
-
 1. [What's the need for not putting event under the body? Since the events will delegate, what's the difference between putting it under the ul and body?](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8757286#questions/5896120 "at 6:52 he says you could put it on anything.. (which he probably means any ancestor in the lineage) you can kind of hear him thinking out loud at that point, but he thought the body would be a more robust example of the issue. As an experiment, you should be able to change body to ul and everything else should still work the same.oops, my experiment failed, and it may be another reason he focused on the body.. just changing body to ul wasn't enough, I kept getting ul is not defined, so I had to make sure I isolated it first with a querySelector, but then it worked as expected.
     // document.body.addEventListener('click', deleteItem);
     // document.ul.addEventListener('click', deleteItem);
@@ -79,26 +75,23 @@ document.querySelector('.col').addEventListener('click', function () {
     }
 ")
 
-1. [COOKIES PLEASE Hey could you make an addition to this for cookies, perhaps include the path from a marketing campaign to persisting ad info to cookies and such. Thanks. Love what you have offered so far.](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8757290#questions/3782208 "I searched his YouTube channel for cookies and I'm surprised I didn't find more on them.. he touches on them periodically, but generally in the context of another subject.
-Node.js API Authentication With JWT
-I do feel like I got a lot from his API course.. he goes into using Postman and makes extensive use of cookies in that course.
-Udemy Course Alert - Node.js API Masterclass
-specifically, he mentions cookies in 8 different lectures, 48, 49 & 50 are probably what I'm remembering..")
+1. [COOKIES PLEASE Hey could you make an addition to this for cookies, perhaps include the path from a marketing campaign to persisting ad info to cookies and such. Thanks. Love what you have offered so far.](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8757290#questions/3782208 "I searched his YouTube channel for cookies and I'm surprised I didn't find more on them.. he touches on them periodically, but generally in the context of another subject. Node.js API Authentication With JWT I do feel like I got a lot from his API course.. he goes into using Postman and makes extensive use of cookies in that course. Udemy Course Alert - Node.js API Masterclass specifically, he mentions cookies in 8 different lectures, 48, 49 & 50 are probably what I'm remembering..")
 
-1. [Fa-remove icon isn't showing up
-   For some reason, the remove icon isn't showing up on the right side. Here's the screenshot and my code. What am I missing?](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8762202#questions/13372176 "comparing your code to his, the differences are minor, except for double or single quotes, but it does look like you've tried to update your external scripts tags. I'd start by pinning to the exact numbers he's referenced, just to make sure and then if you still wanted to update you'd know you're on the right track. But what your asking about is a font awesome icon and you are loading it from a different source. His link to font-awesome has bootstrap in the href and yours has pro
-and are you on the edge browser? he has one line near the top of his HTML that you don't have at all
-and cdns like to stay in the cache, so you might want to make sure that's cleared out for a refresh")
+1. [Fa-remove icon isn't showing up For some reason, the remove icon isn't showing up on the right side. Here's the screenshot and my code. What am I missing?](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8762202#questions/13372176 "comparing your code to his, the differences are minor, except for double or single quotes, but it does look like you've tried to update your external scripts tags. I'd start by pinning to the exact numbers he's referenced, just to make sure and then if you still wanted to update you'd know you're on the right track. But what your asking about is a font awesome icon and you are loading it from a different source. His link to font-awesome has bootstrap in the href and yours has pro and are you on the edge browser? he has one line near the top of his HTML that you don't have at all and cdns like to stay in the cache, so you might want to make sure that's cleared out for a refresh")
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+1. [loadEventListeners() Just to enquire can't seem to understand this concept, but is loadEventListeners() always supposed to be declared globally and include all the event listeners that you are going to use in your application?](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8762202#questions/13247286 "no, in fact, if you listen to what he's saying at the 9:00 minute mark of the previous lecture #34, he specifically states that he's not putting it at the global scope.")
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+1. [unshift time complexity Does anyone understand the run time complexity of unshift. I the programming languages I have worked in placing an item of the front of an array results in having to shift the places of all the elements. Any insights on how this is done in JavaScript would be welcomed](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8762208#questions/13375806 'Found a thread on stack overflow https://stackoverflow.com/questions/12250697/time-complexity-of-unshift-vs-push-in-javascriptand a blog entrylevelup/javascript-arrays-under-the-hood-time-complexityI hope that helps elaborate on what you were asking')
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+1. [today.getDay() return's 3 for me (0 based)
+   Hi there,
+   Today is Wednesday and I just tried this method and the log is logging 3 for me. In the video it's mentioned it's also Wednesday but it return's 4. I looked up the documentation and it seems it's 0 based (https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date/getDay).](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8757212#questions/13377078 "at the 1:00 mark, it's showing Thursday, Nov 9th for him. he does say Wednesday closer to the five-minute mark, but I'm pretty sure it's all one take of the video and he just misspoke.")
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+1. [function removeTask(e) - other methodI realized that we can just target the <i> element on the removeTask function and use its class 'fa-remove' instead of targetting the <a> element. Is it a good idea to do this method or there's a bad side to it that may cause some errors in the future?](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8762208#questions/12802291 "Yes, that seems very functional..but 2 things to consider, especially in future projects where the concepts might become more abstracted. If you are targeting by a font awesome class, you don't have any guarantee, even if you are the front end designer. That you might not want to use that class for a visual effect somewhere else on the page. Where as the delete-item class is something that was designated specifically for this purpose, so the chances of randomly using it somewhere else on the page are far less likely.A second consideration is how small it is, the link is about 10 pixels wider and might make it easier for someone to pinpoint the target area with their mouse (or finger on a touch screen).")
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+1. [Remove Task (Event Delegation) (URGENT) Guyz ... I am still suffering for Event Delegation & need some help for remove task why we use that way which include (delete-item) & I got delegation Idea but not convinced with it .. Is this because of many li s ](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8762208#questions/12528120 "it's best to be as declarative as possible in programming..theoretically, you could refactor to remove by list items <li> by class collection-items or even anchor tags <a> by fa-remove, but if the application grows, like you adding an edit button, you may find yourself re-using those elements on other parts of the page. Whereas the delete-item class has been expressly declared for serving this function.As far as debugging your edit button I'd need to see the code you are trying to use, but please post it as a separate thread, it's easy to get overlooked in the comments. or you can compare it to this link, where another student has added an edit function")
+
+1. [indexOf change view of HTML table Hi there, i use bootsrap to show table in thml and it 's work fine but when i use my app.js with only one function serach i recieve results but the format of the table being ugly vs previous one and i do not understand why it is happens and how it cold be fixed ](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8762208#questions/7176573 "you are filtering for an id of name const filter = document.getElementById('name') but when I search your file for name, I only find 2 entries on lines 41 & 48, but neither of which is an id ")
 
 1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
 
@@ -196,13 +189,11 @@ and cdns like to stay in the cache, so you might want to make sure that's cleare
 
 1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+1. [Why does adding a console.log on line 26 output the final li element? I tried adding a console.log to every step of the creation of the li element to see how it's formed. However, adding a console log right after the "collection-item" class is added on line 26 outputs the li in its final form:](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8762202#questions/5506270 "I'm trying to recreate this, but I keep getting what you had expected instead of what you got. Can you paste the full file? My first thought is did you actually have the later lines commented out? My second thought could you see the full console? If you are making multiple console logs, perhaps you are just seeing the last one and the one you were expecting has already scrolled off the top of your return..")
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+1. [It seems like it won’t let me use the 3 extensions on Visual Studio Project](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8757130#questions/12801477 "Did you figure this out.. I'm trying to clear up lingering questions.. but just saying it's not working isn't much to go on. What seems to be the difficulty? Is it giving you an error message? Can you post screen shots of where you are getting stuck at?")
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
-
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+~~1. [Another way to update total calories Whenever we update, add or delete item we loop through all the data items to calculate total calories. Wouldn't it be better to use total calorie as a global variable and make calculations on that??](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8762208#questions/13376612 "It depends on how you define better. It could delete the load on the server by a few milliseconds, especially if you had several instances all running the same code. But you also open the possibility of more bugs. It could be calculated correctly in one spot but not updating in the other, so at the very least you'd have to do more testing per quality assurance.")~~
 
 ## [Node.js API Masterclass With Express & MongoDB](https://www.udemy.com/course/modern-javascript-from-the-beginning/ 'Node.js API Masterclass With Express & MongoDB')
 
