back log under 199

--- a/2020/12/09.md
+++ b/2020/12/09.md
@@ -93,7 +93,7 @@ document.querySelector('.col').addEventListener('click', function () {
 
 1. [indexOf change view of HTML table Hi there, i use bootsrap to show table in thml and it 's work fine but when i use my app.js with only one function serach i recieve results but the format of the table being ugly vs previous one and i do not understand why it is happens and how it cold be fixed ](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8762208#questions/7176573 "you are filtering for an id of name const filter = document.getElementById('name') but when I search your file for name, I only find 2 entries on lines 41 & 48, but neither of which is an id ")
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+1. [I need to know what is causing this bug This is the GitHub link. Kindly have a look at this project which I designed on my own from scratch after doing your task list project. This is the app link. After having a look it at, please try to find the reason behind the following bug: After adding few tasks to any day, when I delete some tasks, I do see in the local Storage that they are getting deleted. But there are few tasks in the task list which are not getting deleted from the local storage but are getting deleted from the DOM, thus on refreshing they are showing up again! Thanks Brad for your best ever explanations I find. It's after your teaching only that I am able to build such a kind of project on my own. I did courses earlier of other instructors but was never so confident to try a similar but different project than the what the course made me do. Thank you so very much.](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8762218#questions/9729404 "Solid effort with lots of moving parts to keep track of.. right at the top I'd be curious why your array for weekdays has anything but weekdays in it. What ever you are trying to do with that first entry of weeks feels like it should be abstracted into it's own let and not mixed in with all of the others. let weekdays = ['weeks', 'mon', 'tue', 'wed', 'thu', 'fri', 'sat', 'sun']; also under storage, it seems odd that Tues would be an object when the others are arrays?")
 
 1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
 
@@ -187,7 +187,7 @@ document.querySelector('.col').addEventListener('click', function () {
 
 1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+1. [Failed attempt to simplify code Can you (or anyone else) please explain why our removeTaskFromLocalStorage() function does not remove the task when I use the following approach to create the li's in our addTask and getTasks functions:](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8762208#questions/3601364 "Google's Homepage")
 
 1. [Why does adding a console.log on line 26 output the final li element? I tried adding a console.log to every step of the creation of the li element to see how it's formed. However, adding a console log right after the "collection-item" class is added on line 26 outputs the li in its final form:](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8762202#questions/5506270 "I'm trying to recreate this, but I keep getting what you had expected instead of what you got. Can you paste the full file? My first thought is did you actually have the later lines commented out? My second thought could you see the full console? If you are making multiple console logs, perhaps you are just seeing the last one and the one you were expecting has already scrolled off the top of your return..")
 
