--- a/2020/12/09.md
+++ b/2020/12/09.md
@@ -95,9 +95,9 @@ document.querySelector('.col').addEventListener('click', function () {
 
 1. [I need to know what is causing this bug This is the GitHub link. Kindly have a look at this project which I designed on my own from scratch after doing your task list project. This is the app link. After having a look it at, please try to find the reason behind the following bug: After adding few tasks to any day, when I delete some tasks, I do see in the local Storage that they are getting deleted. But there are few tasks in the task list which are not getting deleted from the local storage but are getting deleted from the DOM, thus on refreshing they are showing up again! Thanks Brad for your best ever explanations I find. It's after your teaching only that I am able to build such a kind of project on my own. I did courses earlier of other instructors but was never so confident to try a similar but different project than the what the course made me do. Thank you so very much.](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8762218#questions/9729404 "Solid effort with lots of moving parts to keep track of.. right at the top I'd be curious why your array for weekdays has anything but weekdays in it. What ever you are trying to do with that first entry of weeks feels like it should be abstracted into it's own let and not mixed in with all of the others. let weekdays = ['weeks', 'mon', 'tue', 'wed', 'thu', 'fri', 'sat', 'sun']; also under storage, it seems odd that Tues would be an object when the others are arrays?")
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+1. [.forEach() Hello, Why does it print Hello:0 Hello:1 Hello:2 etc when we add the index parameter. Why doesn;t it do the same when we add 'li' in it. For eg: console.log(`Hello:${li}`); doesn't give the same output](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8757270#questions/13405958 "starting at the 7:30 mark on line 20 he converts it to an array at 8:50 he's passing in the index on line 25 and then logging the Index. Hello comes from a string literal. On line 27 it's the index that was passed in followed by the string of `hello`. It's literally just doing what he has scripted for it to do, no more, no less.. he's using two console logs, one on line 26 in the forEach loop and then another after the loop at the end on line 30, but that one isn't told to log the index, or the hello string.. just the array of list items. I think your confusion comes from the forEach and not understanding the 3 default arguments that are built into it.Check out this link on MDN.. https://developer.mozilla.org/forEach specifically, the 3 arguments that are supplied by default. So when he passes li in on line 25, it is only defined locally for the next 2 lines and the only value it has is the index number. li above or below that line has no global value and those two lines have no other value assigned except for its local value of being the index passed to it from the array it is being called on.")
 
-1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+1. [Can you (or anyone else) please explain why our removeTaskFromLocalStorage() function does not remove the task when I use the following approach to create the li's in our addTask and getTasks functions:](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8762208#questions/3601364 "If I'm reading this correctly, you'd be adding it Adjacent, which would be a sibling instead of a child. It's supposed to append a child, but instead, you'd be adding a brother, so you're logging the uncle.")
 
 1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
 
@@ -195,9 +195,44 @@ document.querySelector('.col').addEventListener('click', function () {
 
 ~~1. [Another way to update total calories Whenever we update, add or delete item we loop through all the data items to calculate total calories. Wouldn't it be better to use total calorie as a global variable and make calculations on that??](https://www.udemy.com/course/modern-javascript-from-the-beginning/learn/lecture/8762208#questions/13376612 "It depends on how you define better. It could delete the load on the server by a few milliseconds, especially if you had several instances all running the same code. But you also open the possibility of more bugs. It could be calculated correctly in one spot but not updating in the other, so at the very least you'd have to do more testing per quality assurance.")~~
 
+## [React Front to Back](https://www.udemy.com/course/modern-javascript-from-the-beginning/ 'Node.js API Masterclass With Express & MongoDB')
+
+### December 2020: React Front to Back
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+
+1. [I'm an inline-style link with title](https://www.google.com "Google's Homepage")
+
 ## [Node.js API Masterclass With Express & MongoDB](https://www.udemy.com/course/modern-javascript-from-the-beginning/ 'Node.js API Masterclass With Express & MongoDB')
 
-### December 2020
+### December 2020: API Masterclass
 
 1. [It is not clear to me what is the advantage of using pm2 instead of npm start. Could somebody please discuss this?](https://www.udemy.com/course/nodejs-api-masterclass/learn/lecture/16582202#questions/12843349 "The advantages of a process manager would be automation. If your server happens to crash while you're asleep it'd still be down when you wake up and you might still not be aware of it and then you'd need to log in and relaunch it manually. More recently I've moved this to DockerFiles that you can set to always restart or restart except when shutdown etc. But the difference between PM2 and npm start is that it can take care of itself automatically and you don't have to be there to babysit the server all day.")
 
